added changes in command construction

--- a/src/AccessCore/AccessCore.csproj
+++ b/src/AccessCore/AccessCore.csproj
@@ -9,6 +9,9 @@
     <Authors>Sevak Amirkhanian</Authors>
     <Company />
     <PackageTags>ORM</PackageTags>
+    <Version>1.0.3</Version>
+    <AssemblyVersion>1.0.0.1</AssemblyVersion>
+    <FileVersion>1.0.0.1</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
