added NuGet related configs in csproj

--- a/src/AccessCore/AccessCore.csproj
+++ b/src/AccessCore/AccessCore.csproj
@@ -9,9 +9,10 @@
     <Authors>Sevak Amirkhanian</Authors>
     <Company />
     <PackageTags>ORM</PackageTags>
-    <Version>1.0.4</Version>
-    <AssemblyVersion>1.0.0.1</AssemblyVersion>
-    <FileVersion>1.0.0.1</FileVersion>
+    <Version>1.1.1</Version>
+    <AssemblyVersion>1.1.1.0</AssemblyVersion>
+    <FileVersion>1.1.1.0</FileVersion>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
