--- a/src/AccessCore/AccessCore.csproj
+++ b/src/AccessCore/AccessCore.csproj
@@ -5,14 +5,18 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseUrl>https://github.com/amirkhaniansev/AccessCore/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/amirkhaniansev/AccessCore</RepositoryUrl>
-    <Description>AccessCore is  a lightweight ORM for working with MS SQL Server.</Description>
+    <Description>AccessCore is  a lightweight ORM for working with relation databases.</Description>
     <Authors>Sevak Amirkhanian</Authors>
     <Company />
     <PackageTags>ORM</PackageTags>
-    <Version>1.1.1</Version>
-    <AssemblyVersion>1.1.1.0</AssemblyVersion>
-    <FileVersion>1.1.1.0</FileVersion>
+    <Version>2.0.0</Version>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>D:\repositories\AccessCore\src\AccessCore\AccessCore.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
